# violin-identification-2026

./: pyproject.toml
data/interim/: baseline_results.csv  excerpts_results.csv  players_results.csv  scaling_results.csv
docs/: data-amount-influence.html  factor-influence.html  index.html  is-identification-possible-humans.html  is-identification-possible-machine.html  materials.html  search.json
docs/site_libs/bootstrap/: bootstrap-47b264a900823d735a76806f6672d662.min.css
reports/: _quarto.yml  data-amount-influence.qmd  data-amount-influence.quarto_ipynb  factor-influence.qmd  factor-influence.quarto_ipynb  index.qmd  is-identification-possible-humans.qmd  is-identification-possible-humans.quarto_ipynb  is-identification-possible-machine.qmd  is-identification-possible-machine.quarto_ipynb  materials.qmd  materials.quarto_ipynb
reports/.quarto/cites/: index.json
reports/.quarto/idx/: data-amount-influence.qmd.json  factor-influence.qmd.json  index.qmd.json  is-identification-possible-humans.qmd.json  is-identification-possible-machine.qmd.json  materials.qmd.json
reports/.quarto/project-cache/: deno-kv-file
reports/.quarto/quarto-session-temp5e0705a0967936fe/: 32ec3a1a7dfdc29.scss
reports/.quarto/xref/: 0ae63fd2  5ecefdce  INDEX  (+3 more)
reports/_output/: data-amount-influence.html  excerpt-influence.html  index.html  is-identification-possible-humans.html  is-identification-possible-machine.html  materials.html  search.json
src/violin_identification/: features.py  loader.py  plots.py
src/violin_identification.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+16 files in other folders)
