[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "violin_identification"  # This is the 'pip install' name
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [

]

[tool.setuptools.packages.find]
where = ["src"]